[package]
name = "api-rust-user-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
dotenv = "0.15.0"
futures = "0.3.26"
serde = "1.0.152"

[dependencies.mongodb]
mongodb = "2.3.1"
default-features = false
features = ["async-std-runtime"]